2012-10-23  Shinya Kawanaka  <shinyak@chromium.org>

        The order of resolving distribution in tree composition is wrong.
        https://bugs.webkit.org/show_bug.cgi?id=99552

        Reviewed by Dimitri Glazkov.

        We also fix the existing wrong test.

        * fast/dom/shadow/content-reprojection-order-expected.html: Added.
        * fast/dom/shadow/content-reprojection-order.html: Added.
        * fast/dom/shadow/shadow-element-rendering-single.html:

2012-10-23  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed GTK gardening.

        Adding failure expectation for fast/media/mq-resolution.html, it relies
        on the Resolution Media Query feature being enabled.
        Adding a proper bug modifier for fast/files/workers/worker-apply-blob-url-to-xhr.html.

        * platform/gtk/TestExpectations:

2012-10-23  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Move UISourceCode creation out of mappings to workspace.
        https://bugs.webkit.org/show_bug.cgi?id=100092

        Reviewed by Pavel Feldman.

        * http/tests/inspector/workspace-test.js:
        (initialize_WorkspaceTest.InspectorTest.addMockUISourceCodeToWorkspace):
        * inspector/debugger/resource-script-mapping-expected.txt:
        * inspector/debugger/scripts-panel.html:

2012-10-23  Mike West  <mkwst@chromium.org>

        Web Inspector: MIME type errors should truncate long URLs.
        https://bugs.webkit.org/show_bug.cgi?id=100083

        Reviewed by Pavel Feldman.

        * http/tests/inspector/network/image-as-text-loading-data-url-expected.txt: Added.
        * http/tests/inspector/network/image-as-text-loading-data-url.html: Added.

2012-10-23  Alexander Pavlov  <apavlov@chromium.org>

        Web Inspector: Crash when adding a keyframes rule in the Styles pane
        https://bugs.webkit.org/show_bug.cgi?id=99826

        Reviewed by Pavel Feldman.

        * inspector/styles/add-new-rule-invalid-selector-expected.txt: Added.