@@ -1,3 +1,13 @@
+2012-10-23  Pavel Feldman  <pfeldman@chromium.org>
+
+        Web Inspector: array grouping does not work for arrays with exactly 10000 elements.
+        https://bugs.webkit.org/show_bug.cgi?id=100131
+
+        Reviewed by Vsevolod Vlasov.
+
+        * inspector/console/console-big-array-expected.txt:
+        * inspector/console/console-big-array.html:
+
 2012-10-23  Shinya Kawanaka  <shinyak@chromium.org>
 
         The order of resolving distribution in tree composition is wrong.
